[metadata]
name = econt
version = 1.0.4
author = Kalinin Mitko
author_email = kalinin.mitko@gmail.com
description = Econt Express Service 
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/lesthetique-store/econt
project_urls =
    Bug Tracker = https://github.com/lesthetique-store/econt/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    requests
    dicttoxml
    xmltodict
    nested_lookup

[options.packages.find]
where = src